--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <title>打开应用</title>
   </head>
   <body>
-    <h1>打开指定包名的应用</h1>
-    <button onclick="openApp()">打开车机应用</button>
+    <h1>车机端Maxplay测试入口</h1>
+    <button onclick="openApp()">打开应用</button>
 
     <script>
       function openApp() {
